cpp/isogram/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.018s
user	0m0.002s
sys	0m0.015s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
[ 25%] Building CXX object CMakeFiles/isogram.dir/isogram_test.cpp.o
[ 50%] Building CXX object CMakeFiles/isogram.dir/isogram.cpp.o
[ 75%] Building CXX object CMakeFiles/isogram.dir/test/tests-main.cpp.o
[100%] Linking CXX executable isogram
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
[100%] Built target isogram
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
===============================================================================
All tests passed (13 assertions in 13 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
[100%] Built target test_isogram
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/isogram.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/isogram.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)13103"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
isogram.cpp                                   17      16    94%   11
isogram_test.cpp                              65      65   100%   
test/catch.hpp                                31      26    83%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        113     107    94%
------------------------------------------------------------------------------
lines: 94.7% (107 out of 113)
branches: 40.7% (105 out of 258)

real	0m9.727s
user	0m8.893s
sys	0m0.830s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.263s
user	0m0.212s
sys	0m0.054s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.327s
user	0m0.245s
sys	0m0.084s

===============================================================================

Running: clang-format-16 -style=file -i ./isogram.cpp ./isogram_test.cpp ./isogram.h

real	0m0.032s
user	0m0.018s
sys	0m0.014s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./isogram.cpp ./isogram_test.cpp ./isogram.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/isogram.h:4:10: fatal error: 'algorithm' file not found
#include <algorithm>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/isogram.h.

real	0m0.663s
user	0m0.618s
sys	0m0.045s


real	0m0.667s
user	0m0.620s
sys	0m0.046s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
22934 warnings generated.
59858 warnings generated.
59858 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/isogram.h.
Suppressed 59863 warnings (59858 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m8.053s
user	0m7.990s
sys	0m0.062s
Running: clang-tidy-16 ./isogram.cpp ./isogram_test.cpp ./isogram.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/isogram/isogram.h:4:10: error: 'algorithm' file not found [clang-diagnostic-error]
#include <algorithm>
         ^~~~~~~~~~~


real	0m8.055s
user	0m7.990s
sys	0m0.066s

===============================================================================

